[gd_scene load_steps=10 format=3 uid="uid://cr76tloydxhqv"]

[ext_resource type="Script" uid="uid://kmgctrilcs05" path="res://scenes/ui/show_options_screen.gd" id="1_ypa5q"]
[ext_resource type="Theme" uid="uid://ch4ic0feakt4r" path="res://assets/themes/default_theme.tres" id="2_ilq0o"]
[ext_resource type="Theme" uid="uid://cjpmhdv1xll3w" path="res://assets/themes/default_theme_small_font_no_outline.tres" id="3_a585k"]
[ext_resource type="PackedScene" uid="uid://b7jbkkvivmc7c" path="res://scenes/ui/sound_button.tscn" id="4_d00r5"]

[sub_resource type="Animation" id="Animation_ycltl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ge8p4"]
resource_name = "auto"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63k0w"]
_data = {
&"RESET": SubResource("Animation_ycltl"),
&"auto": SubResource("Animation_ge8p4")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_otr3d"]
bg_color = Color(0.1564, 0.1196, 0.23, 0.870588)
border_width_left = 1
border_width_top = 4
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.393123, 0.322212, 0.542962, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 4.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ekit"]
bg_color = Color(0.1292, 0.0988, 0.19, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="ShowOptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ypa5q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_63k0w")
}
autoplay = "auto"

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.176471)

[node name="ControlsPanel" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_ilq0o")
theme_override_styles/panel = SubResource("StyleBoxFlat_otr3d")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ControlsLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AudioPanelContainer" type="PanelContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8ekit")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer/AudioPanelContainer"]
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer/AudioPanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ControllerLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer/AudioPanelContainer/VBoxContainer/Audio"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "AUDIO"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer/AudioPanelContainer/VBoxContainer/Audio"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BGMCheckButton" type="CheckButton" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer/AudioPanelContainer/VBoxContainer/Audio/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../SFXCheckButton")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "BGM"

[node name="SFXCheckButton" type="CheckButton" parent="MarginContainer/ControlsPanel/VBoxContainer/HBoxContainer/AudioPanelContainer/VBoxContainer/Audio/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../BGMCheckButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../../../../SoundButton")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "SFX"

[node name="HowToAccessInfoLabel" type="Label" parent="MarginContainer/ControlsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_a585k")
horizontal_alignment = 1

[node name="SoundButton" parent="MarginContainer/ControlsPanel/VBoxContainer" instance=ExtResource("4_d00r5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBoxContainer/AudioPanelContainer/VBoxContainer/Audio/VBoxContainer/SFXCheckButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "BACK"
